[package]
name = "dominus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.3"
anyhow = "1.0.81"
criterion = "0.5.1"
dashmap = "5.5.3"
parking_lot = "0.12.1"
rand = "0.8.4"

[[bench]]
name = "bench"
harness = false

[profile.bench]
opt-level = 0
